Fix bar alignments

--- a/src/feature/game/game-board.module.css
+++ b/src/feature/game/game-board.module.css
@@ -19,7 +19,7 @@
 }
 
 .horizontal-2 {
-  top: 66%;
+  top: 66.5%;
 }
 
 .vertical-base {
@@ -33,5 +33,5 @@
 }
 
 .vertical-2 {
-  left: 66%;
+  left: 66.5%;
 }
